libycp/testsuite/tests/types/type_bitshift.err
[Parser] tests/types/type_bitshift.ycp:2 syntax error, unexpected RIGHT, expecting '&' or '>' or '('
runycp: parser error
