libycp/testsuite/tests/types/type_bitshift.ycp
{
  list <list <string>> l = [ [ "foo" ] ];	// ">>" is wrong, must be "> >"
}
